pkg/lang/testdata/ub/inputs/invalid/default-bare-identifier.ub
inputs: {
  mode: { type: optional(string, tcp) }
}
